@@ -69,7 +69,7 @@ int gl_brkdebug;
 int gl_expand_constants;
 int gl_optimize_flags;
 int gl_dat_offset;
-int gl_warn_flags = WARN_ASM_USAGE;
+int gl_warn_flags = DEFAULT_WARN_FLAGS;
 int gl_exit_status = 0;
 int gl_printprogress = 0;
 int gl_infer_ctypes = 0;
